Fix the code in ShortcutRegistration to compile in Java 9 as well (thanks @mshabarov).